--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,9 +8,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/missile_launcher"
+        android:icon="@mipmap/fg_missile_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/missile_launcher_round"
+        android:roundIcon="@mipmap/fg_missile_launcher"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
