--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,20 @@
+buildscript {
+    repositories {
+        jcenter()
+        google()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:3.2.0'
+    }
+}
+
+allprojects {
+    repositories {
+        jcenter()
+        google()
+    }
+}
+
 apply plugin: 'com.android.application'
 
 android {
