renamed package. checking for navbar updates for landscape

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,8 +20,8 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 26
     defaultConfig {
-        applicationId "com.missilelauncher.overlaytestv1"
-        minSdkVersion 17
+        applicationId "com.missilelauncher.missilelauncher"
+        minSdkVersion 21
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
