--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,8 @@
         <activity
             android:name="com.missilelauncher.missilelauncher.SettingsActivity"
             android:label="@string/title_activity_settings"></activity>
+        <activity android:name="com.missilelauncher.missilelauncher.GroupIconPicker" />
+
         <activity android:name="com.missilelauncher.missilelauncher.G1SelectedItems" />
         <activity android:name="com.missilelauncher.missilelauncher.G2SelectedItems" />
         <activity android:name="com.missilelauncher.missilelauncher.G3SelectedItems" />
