implemented Broadcast Reciever to keep FloatingWindow alive when destroyed.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,12 @@
                 <action android:name="android.intent.action.BOOT_COMPLETED"/>
             </intent-filter>
         </receiver>
+        <receiver android:name=".RestartServiceReceiver" >
+            <intent-filter>
+                <action android:name="StayinAlive" >
+                </action>
+            </intent-filter>
+        </receiver>
     </application>
 
 
