--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,7 +41,7 @@
         <activity android:name=".G7SelectedItems" />
         <activity
             android:name=".PlayStorePrompt"
-            android:theme="@style/AppTheme.Modal" />
+            android:theme="@style/AppTheme.Modal.EasyRemove" />
         <activity
             android:name=".AutoSort"
             android:theme="@style/AppTheme.Modal" />
