--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,9 +48,12 @@
         <service android:name=".FloatingWindow"
             android:enabled="true"/>
 
-        <receiver android:name=".DeviceBootReceiver">
+        <receiver android:name=".DeviceBootReceiver"
+            android:enabled="true"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <action android:name="android.intent.action.QUICKBOOT_POWERON" />
             </intent-filter>
         </receiver>
 
