--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,16 +9,17 @@
     <uses-permission android:name="android.permission.SET_ALARM" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
+    <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES"/>
 
 
     <application
-        android:allowBackup="true"
         android:icon="@mipmap/missile_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/missile_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:appCategory="productivity"
+        android:allowBackup="true"
         android:fullBackupContent="false">
         <activity android:name=".MainActivity">
             <intent-filter>
